--- a/management/templates/management/student.html
+++ b/management/templates/management/student.html
@@ -8,6 +8,7 @@
 <img src="{{student.image.url}}" width="100px">
 出席率:100%
 出席履歴
+<a href="{% url 'delete' student.pk%}">生徒を削除する</a>
 <table>
     <tr>
         <th>日付</th>
